force-app/main/default/objects/KimbleOne__PlanItem__c/KimbleOne__PlanItem__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Plan Item</label>
    <nameField>
        <label>Plan Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>