force-app/main/default/objects/KimbleOne__PlanItem__c/fields/KimbleOne__CompletePercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CompletePercentage__c</fullName>
    <formula>IF ( KimbleOne__PlanItemType__r.KimbleOne__Enum__c = &apos;Task&apos;, 
     IF ( KimbleOne__IsSummary__c, IF( KimbleOne__SummaryTaskTotalEffort__c &gt; 0,
                            KimbleOne__SummaryTaskExpendedEffort__c/KimbleOne__SummaryTaskTotalEffort__c,
                            1 ), KimbleOne__PlanTask__r.KimbleOne__EffortCompletePercentage__c ), 
     IF ( KimbleOne__PlanMilestone__r.KimbleOne__Milestone__r.KimbleOne__MilestoneStatus__r.KimbleOne__Enum__c = &apos;Open&apos;, 0, 1 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pct Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>