force-app/main/default/objects/KimbleOne__PlanItem__c/fields/KimbleOne__FullName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FullName__c</fullName>
    <formula>IF ( KimbleOne__PlanItemType__r.KimbleOne__Enum__c = &apos;Task&apos;, KimbleOne__Task__r.KimbleOne__FullName__c,  KimbleOne__Milestone__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>