force-app/main/default/objects/KimbleOne__PlanItem__c/fields/KimbleOne__IsInternal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsInternal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Internal?</label>
    <type>Checkbox</type>
</CustomField>