force-app/main/default/objects/KimbleOne__PlanItem__c/fields/KimbleOne__IsIteration__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsIteration__c</fullName>
    <formula>IF ( KimbleOne__PlanItemType__r.KimbleOne__Enum__c = &apos;Task&apos;,  KimbleOne__Task__r.KimbleOne__IsIteration__c, false )</formula>
    <label>Is Iteration?</label>
    <type>Checkbox</type>
</CustomField>