force-app/main/default/objects/KimbleOne__PlanItem__c/fields/KimbleOne__IsSummary__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsSummary__c</fullName>
    <formula>IF ( KimbleOne__PlanItemType__r.KimbleOne__Enum__c = &apos;Task&apos;,  KimbleOne__Task__r.KimbleOne__IsSummary__c, true )</formula>
    <label>Is Summary?</label>
    <type>Checkbox</type>
</CustomField>