force-app/main/default/objects/KimbleOne__PlanItem__c/fields/KimbleOne__Milestone__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone</label>
    <referenceTo>KimbleOne__Milestone__c</referenceTo>
    <relationshipLabel>Plan Items</relationshipLabel>
    <relationshipName>PlanItems</relationshipName>
    <type>Lookup</type>
</CustomField>