force-app/main/default/objects/KimbleOne__PlanItem__c/fields/KimbleOne__PlanItemType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PlanItemType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Plan Item Type</label>
    <referenceTo>KimbleOne__PlanItemType__c</referenceTo>
    <relationshipLabel>Plan Items</relationshipLabel>
    <relationshipName>PlanItems</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>