force-app/main/default/objects/KimbleOne__PlanItem__c/fields/KimbleOne__PlanMilestone__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PlanMilestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Milestone</label>
    <referenceTo>KimbleOne__PlanMilestone__c</referenceTo>
    <relationshipLabel>Plan Items</relationshipLabel>
    <relationshipName>PlanItems</relationshipName>
    <type>Lookup</type>
</CustomField>