force-app/main/default/objects/KimbleOne__PlanItem__c/fields/KimbleOne__StartDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StartDate__c</fullName>
    <formula>IF ( KimbleOne__PlanItemType__r.KimbleOne__Enum__c = &apos;Task&apos;, KimbleOne__PlanTask__r.KimbleOne__StartDate__c, KimbleOne__Milestone__r.KimbleOne__MilestoneDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>