force-app/main/default/objects/KimbleOne__PlanItem__c/fields/KimbleOne__SummaryTaskExpendedEffort__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SummaryTaskExpendedEffort__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Summary Task Expended Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>