force-app/main/default/objects/KimbleOne__PlanItem__c/fields/KimbleOne__SummaryTaskRemainingEffort__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SummaryTaskRemainingEffort__c</fullName>
    <label>Summary Task Remaining Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>