force-app/main/default/objects/KimbleOne__PlanItem__c/fields/KimbleOne__SummaryTaskTotalEffort__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SummaryTaskTotalEffort__c</fullName>
    <formula>KimbleOne__SummaryTaskExpendedEffort__c + KimbleOne__SummaryTaskRemainingEffort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary Task Total Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>