force-app/main/default/objects/KimbleOne__PlanItem__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__DisplaySequence__c</columns>
    <columns>KimbleOne__Task__c</columns>
    <columns>KimbleOne__Milestone__c</columns>
    <columns>KimbleOne__PlanItem__c</columns>
    <columns>KimbleOne__Level__c</columns>
    <columns>KimbleOne__PlanItemType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>