force-app/main/default/objects/KimbleOne__PlanItem__c/listViews/KimbleOne__Plan_B.listView-meta.xml
<ListView>
    <fullName>KimbleOne__Plan_B</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__DeliveryGroup__c</columns>
    <columns>KimbleOne__Level__c</columns>
    <columns>KimbleOne__PlanItem__c</columns>
    <columns>KimbleOne__DisplaySequence__c</columns>
    <columns>KimbleOne__StartDate__c</columns>
    <columns>KimbleOne__EndDate__c</columns>
    <columns>KimbleOne__Task__c</columns>
    <columns>KimbleOne__PlanTask__c</columns>
    <columns>KimbleOne__Milestone__c</columns>
    <columns>KimbleOne__PlanMilestone__c</columns>
    <columns>KimbleOne__IsSummary__c</columns>
    <columns>KimbleOne__CompletePercentage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__DeliveryGroup__c</field>
        <operation>equals</operation>
        <value>Plan B</value>
    </filters>
    <label>Plan B</label>
    <language>en_US</language>
</ListView>